# yamii

./: .env.example  .gitignore  DOCKER_BOT_SETUP.md  DOCKER_DEPLOY.md  Dockerfile  LICENSE  NAVI.md  README.md  YAMII.md  cli_bot.py  diff.patch  docker-compose.yml  pyproject.toml  requirements.txt  run_navi.sh  run_yamii.sh  start_navi.py  start_yamii.py  test_aichat.py  test_custom_prompts.py  test_integration.py  test_user_profile.py
.github/workflows/: ci.yml
config/: YAMII.md
docs/: MODERATION_DESIGN.md  architecture.md  misskey-bot.md  privacy.md
navi/: __init__.py  aichat.py  cli.py  counseling_service.py  custom_prompt.py  main.py  markdown_prompt_loader.py  memory.py  user_profile.py  user_settings.py
navi/bot/: README.md  __init__.py
navi/bot/common/: __init__.py  base_bot.py  command_parser.py  message_handler.py  navi_api_client.py  session_manager.py
navi/bot/misskey/: __init__.py  config.py  misskey_client.py  navi_bot.py  navi_client.py
navi/core/: __init__.py  database.py  dependencies.py  encryption.py  exceptions.py  logging.py  markdown_loader.py  secure_prompt_store.py
navi/services/: __init__.py  counseling_service.py
tests/: __init__.py  test_aichat.py  test_api_auth.py  test_api_compatibility.py  test_api_routes_auth.py  test_api_routes_user_data.py  test_counseling_service.py  test_custom_prompts.py  test_e2ee_encryption.py  test_encrypted_storage.py  test_misskey_bot.py  test_refactored_counseling.py  test_user_profile.py
tests/test_relationship/: __init__.py  test_episode_manager.py  test_memory_system.py  test_models.py  test_phase_manager.py
yamii/: __init__.py  analytics.py  cli.py  context_awareness.py  conversation_summary.py  intelligent_search.py  main.py  persona.py  user_learning.py  user_profile.py  user_settings.py
yamii/adapters/: __init__.py
yamii/adapters/ai/: __init__.py  gemini.py  openai.py
yamii/adapters/storage/: __init__.py  encrypted_blob_file.py  encrypted_file.py  file.py
yamii/api/: __init__.py  auth.py  dependencies.py  main.py  schemas.py
yamii/api/routes/: __init__.py  auth.py  commands.py  config.py  counseling.py  outreach.py  title.py  user.py  user_data.py
yamii/bot/: README.md  __init__.py
yamii/bot/common/: __init__.py  base_bot.py  command_parser.py  message_handler.py  yamii_api_client.py
yamii/bot/misskey/: __init__.py  config.py  misskey_client.py  yamii_bot.py  yamii_client.py
yamii/core/: __init__.py  anonymizer.py  config.py  database.py  dependencies.py  encryption.py  exceptions.py  key_management.py  logging.py  markdown_loader.py  prompt_store.py  secure_prompt_store.py
yamii/domain/: __init__.py
yamii/domain/models/: __init__.py  conversation.py  emotion.py  relationship.py  user.py
yamii/domain/ports/: __init__.py  ai_port.py  encrypted_blob_storage_port.py  platform_port.py  storage_port.py
yamii/domain/services/: __init__.py  counseling.py  emotion.py  outreach.py
yamii/models/: __init__.py  context.py  request.py  response.py  session.py
yamii/relationship/: __init__.py  adaptive_profile.py  episode_manager.py  memory_system.py  models.py  phase_manager.py  prompt_generator.py
yamii/scripts/: __init__.py  outreach_cron.py
yamii/services/: __init__.py  adaptive_counseling_service.py  counseling_service.py  emotion_service.py  enhanced_counseling_service.py  persona_service.py
