[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yamii"
version = "0.1.0"
description = "Yamii - AI Chat Service"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "charset-normalizer==3.4.3",
    "greenlet==3.2.4",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pynacl==1.5.0",
    "requests==2.32.5",
    "rich==14.1.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.43",
    "typer==0.16.1",
    "urllib3==2.5.0",
    "uvicorn[standard]==0.24.0",
    "fastapi==0.104.1",
    "cryptography==41.0.0",
    "aiohttp==3.9.1",
    "websockets>=11.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["yamii"]

[project.scripts]
yamii-bot = "yamii.cli_bot:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ty]
python-version = "3.10"

[tool.ty.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
